# adt-press

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  adt-eval.py  adt-press-gui.py  adt-press.py  config.html  config.yaml  data.json  glossary_report.html  index.html  page_report.html  plate.json  plate_report.html  processed_images.html  pruned_images.html  pyproject.toml  ruff.toml  test_filtering_improvement.py  test_single_column.py  test_text_only_validator.py  test_vector_analysis.py  test_vector_grouping.py  translation_report.html  web_report.html
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
adt/: package-lock.json  sec_p10_s0.html  sec_p11_s0.html  sec_p12_s0.html  sec_p13_s0.html  sec_p14_s0.html  sec_p15_s0.html  sec_p16_s0.html  sec_p17_s0.html  sec_p18_s0.html  sec_p1_s0.html  sec_p20_s0.html  sec_p3_s0.html  sec_p5_s0.html  sec_p6_s0.html  sec_p7_s0.html  sec_p8_s0.html  sec_p9_s0.html
adt_eval/: __init__.py  base.py  text_extraction.py  text_extraction_edit.py  text_type.py  types.py
adt_press/: pipeline.py
cache/: -UkJDtocg3d_ZVMW2xygne1wZOeOF3kvSHgW4Q==  0137wCFXFKECnHp5KssYyyXGIJBTb5YHyp-RgA==  0U5sPENdJVA_fn4H1h3edl2q4QVDsf80tqzs0A==  0UHleMFOO3cfC6VJvQOiR9zA_gxE-4U_BM8QMg==  0wwq3IrmM-ghddD4iI52o5LFHdxSUlOJdm52KA==  1q09H4DZFJe4hoXCPb_5zw==  2MqgqxpOaZAOSrYolYJdu22POBCN1rnl7ykpDA==  3U2GV-VyvPn6iIZ6s3Rd4aqmsNBfY2RkG_LFbQ==  4ViPZtdE1BpKr0UwQt-BWQ==  6jO66-gALVI3Y2m0OzDQQL-taEVSSB00tj99lQ==  7nKHBOjylOPJlsz737X3yA==  9hpEsGe-LHu4KySXQ_3f-U94wWbKsqZk8ytYlA==  BKDx9cNFt4z1SbzxPnWEmZDZ8OHznGh9Ua0dxQ==  BsVqiZSdYX3vUvNxw1e22w==  CymFJxqHm4Y_91VnfETu5A==  E5kzaI8wrOLAzfpdetHSPEqR-Azo3U3LOuVyRw==  FLJEmuArD_mMcRpN_LDZnXhFgmtEhmhK4EYTUQ==  GS0HAThzlWYpe5QoZZ_SlD_E7X7coQJRKTLHBQ==  Hv4Bpyj0b8jje87yoKInKZfyujCfFQOHnm5g3A==  IOdZm3lyMZ7QPSCvZ1fVXUFHuuFE2VqPuWNvBA==  Iw0lDinOfNcP5An8Ng2jjfz5KhQNJcuSSq1Jaw==  JVcUn-FsfEG2O2E8q_XB5w==  M93kOw6Xc_TGlj0fA82CHwFDOkx7VfrL7e83Nw==  MeX3WqZocf9Ux-2dPD3VVxvuIPn-5VMZrGfPAA==  O16ZxvQQv9H2Dbl-3YbtySq0bJrHVPW2ZvBSNg==  Ox6iQR6syJS1aKKs-rwLkA==  PmbpcRE0fy1gYskXrXxdh_N6KgjXVPDL05DXYw==  SySJbxgmSe0vlSWNCTL3OtiJqEFOYOfY8zAdkw==  T7itT0o1m0AClaRYkSTD-KQCCEG18aP2O5ruOg==  TlNVEzT9FDSKS6gY-lGaUjnGC7ln4CMv89mPeQ==  Ty69myCSmYKPJiJaoseMwA==  U9Nk8ggyPjMOhoVJCboTjA==  Ua9az0um8VTEYwSUVaXgUA==  VNn65DP9PGF6ADZqsIlORJhiDiLQBHb_jeWnsA==  WgtJ8gr_vJWmY8CjRrK4D3Du-lN6haKp8R4BWA==  ZJmJmHzkJ9v3uJHELYZ0kEVuKQAf9ZjhWrq-QQ==  ZX_dGkNRGInPXYlmoRvFTQ==  Zh1eY7OCgP7Yl7YfDCBdqg==  _N5apV64KnoFERN2CJMVUZBq6rxvhl_I5oXeRQ==  ay3tUdgaRAPYpL0l-h5X7g==  (+38 more)
config/: config-backup.yaml  config.yaml  eval_config.yaml
extract/: pdf_extract.json
htmlcov/: adt-press_py.html  class_index.html  function_index.html  index.html  status.json  z_07d76e7257794af8___init___py.html  z_07d76e7257794af8_glossary_translation_py.html  z_07d76e7257794af8_image_caption_py.html  z_07d76e7257794af8_image_crop_py.html  z_07d76e7257794af8_image_meaningfulness_py.html  (+45 more)
plate-editor/: README.md  (+5 more)
tools/pdf_extractor/: README.md  models.py  pdf_extractor.py  pyproject.toml  requirements.txt  utils.py
(+353 files in other folders)
